--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-modal": "^3.6.1",
     "react-moment": "^0.8.2",
     "react-redux": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.0.5",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
